# thesis

cpp/: CMakeLists.txt
cpp/proj/: CMakeLists.txt
cpp/proj/benchmarks/: CMakeLists.txt  build_graph_bench.cpp  full_build_benchmark.cpp  grafpe_encrypt.cpp  perm_gen.cpp
cpp/proj/clients/: CMakeLists.txt  ascii_crypt.cpp  bignum_crypter.cpp  dfa_from_regex.cpp  gen_graph.cpp  irs.cpp  logger_test.cpp  test_distribution.cpp
cpp/proj/dfare/: CMakeLists.txt
cpp/proj/dfare/include/dfare/: exceptions.hpp
cpp/proj/dfare/include/dfare/common/: Alphabet.hpp
cpp/proj/dfare/include/dfare/dfa/: DFA.hpp  RankedDFA.hpp
cpp/proj/dfare/include/dfare/regexp/: Closure.hpp  Concat.hpp  Empty.hpp  Eps.hpp  RegExp.hpp  RegExpBase.hpp  Sum.hpp  from_string.hpp
cpp/proj/dfare/src/: Alphabet.cpp  Closure.cpp  Concat.cpp  DFA.cpp  RankedDFA.cpp  RegExp.cpp  RegExpBase.cpp  Sum.cpp  from_string.cpp
cpp/proj/examples/: CMakeLists.txt  ccn_crypt.cpp  mail_crypt1.cpp  mail_crypt2.cpp
cpp/proj/grafpe/: CMakeLists.txt  GrafpeConfig.hpp.in
cpp/proj/grafpe/include/grafpe/: config.hpp
cpp/proj/grafpe/include/grafpe/aes/: I_AESCipher.hpp  utils.hpp
cpp/proj/grafpe/include/grafpe/aes/openssl/: AesCtr128.hpp  AesCtr128PRNG.hpp  AesCtr256.hpp  AesCtr256PRNG.hpp  AesCtrPRNG_engine.hpp
cpp/proj/grafpe/include/grafpe/common/: print_utils.hpp  type_utils.hpp
cpp/proj/grafpe/include/grafpe/crypt/: Cast.hpp  Crypter.hpp  Grafpe.hpp  GraphTraverser.hpp  ScalarGrafpe.hpp  Targeted.hpp  Tuple.hpp  utils.hpp
cpp/proj/grafpe/include/grafpe/domain/: CSDC.hpp  CycleSlicer.hpp  CycleWalker.hpp  MultiRoundsDT.hpp  ReverseCycleWalker.hpp  utils.hpp
cpp/proj/grafpe/include/grafpe/graph/: Graph.hpp  GraphBuilder.hpp  utils.hpp
cpp/proj/grafpe/include/grafpe/permutation/: PermGen.hpp  PermGen_Compat.hpp  utils.hpp
cpp/proj/grafpe/include/grafpe/prf/: FastBoolPRF.hpp  LazyBoolPRF.hpp  RangeBoolPRF.hpp
cpp/proj/grafpe/include/grafpe/prng/: DummyPRNG.hpp  PRNG.hpp  utils.hpp
cpp/proj/grafpe/include/grafpe/rte/: Container.hpp  DFA.hpp
cpp/proj/grafpe/src/common/: print_utils.cpp
cpp/proj/grafpe/src/crypt/: GraphTraverser.cpp  utils.cpp
cpp/proj/grafpe/src/graph/: utils.cpp
cpp/proj/grafpe/src/permutation/: utils.cpp
cpp/proj/purlib/: CMakeLists.txt
cpp/proj/purlib/include/pur/argparser/: ArgParser.hpp  Argument.hpp  exceptions.hpp
cpp/proj/purlib/include/pur/containers/: bitset.hpp  bitset_view.hpp
cpp/proj/purlib/include/pur/logger/: Logger.hpp  stream_operators.hpp
cpp/proj/purlib/include/pur/optional/: Optional.hpp
cpp/proj/purlib/include/pur/tokenizer/: Tokenizer.hpp  TokenizerBase.hpp
cpp/proj/purlib/src/containers/: bitset.cpp  bitset_view.cpp
cpp/proj/purlib/src/logger/: Logger.cpp  stream_operators.cpp
cpp/proj/purlib/src/tokenizer/: Tokenizer.cpp
cpp/proj/test/: CMakeLists.txt
cpp/proj/test/catch/: test_main.cpp
cpp/proj/test/dfare/: CMakeLists.txt  testAlphabet.cpp  testBuildDFA.cpp  testPrintRegExp.cpp  testRankDFA.cpp  testRegExpDerivative.cpp  testRegExpEquivalency.cpp  testRegExpFromString.cpp  testRegExpReductions.cpp  testRunDFA.cpp
cpp/proj/test/grafpe/: CMakeLists.txt  testAesCtr256Openssl.cpp  testAesOpenssl.cpp  testBitGet.cpp  testBoolPRF.cpp  testBuildGraph.cpp  testCSDC.cpp  testContainerCrypter.cpp  testConv.cpp  testCryptUtils.cpp  testCrypter.cpp  testCycleSlicer.cpp  testCycleWalker.cpp  testDFACrypter.cpp  testMultiCrypters.cpp  testPRNG.cpp  testPermGen.cpp  testPermUtils.cpp  testReverseCycleWalker.cpp  testSequenceCrypter.cpp  testTupleCrypter.cpp
cpp/proj/test/purlib/: CMakeLists.txt  testArgParser.cpp  testBitset.cpp  testContainers.cpp  testLogger.cpp  testStreamOperators.cpp  testTokenizer.cpp
cpp/proj/tools/: 10000_16.dot  cslicer_rounds.py  dfa_painter.py  distribution_stats.py  gd100-16.gv  graph.dot  graph_painter.py  graph_to_dot.py  graph_tvd.py  rcwalker_rounds.py
rust/: Cargo.toml  graph.dot
rust/grafpe/: Cargo.toml
rust/grafpe/benches/: bench_build_graph.rs  bench_build_new_graph.rs  bench_ccn.rs  bench_ccn_b.rs  bench_crypt.rs
rust/grafpe/fuzz/: Cargo.toml
rust/grafpe/fuzz/fuzz_targets/: fuzz_target_1.rs
rust/grafpe/src/: crypt.rs  fpe.rs  graph.rs  irs.rs  lib.rs  main.rs  perm.rs  prng.rs
rust/grafpe/src/fpe/: ccn.rs
rust/grafpe/src/graph/: convertible.rs  random_walks.rs  srw.rs  to_perm.rs  tree_policy.rs  walker.rs
rust/grafpe/src/perm/: error.rs  valid.rs
rust/graphs/: 10000_4.dot  1000_32.dot  1000_4.dot  1000_8.dot  100_4.dot  10_4.dot  2000_32.dot  2000_4.dot  2000_64.dot  200_4.dot  3000_4.dot  3000_8.dot  300_4.dot  300_8.dot  4000_4.dot  400_4.dot  5000_4.dot  5000_8.dot  500_4.dot  500_8.dot  6000_4.dot  7000_4.dot  8000_4.dot  800_8.dot  9000_4.dot  900_8.dot  current.dot  graph.dot
rust/graphs/scripts/: alpha_prec.py  avg_alpha.py  gen_graph.sh  interpolate.py  pow.py  tmix.py  tmix_eq.py  tvd.py
rust/matrix_mul/: cuda.tar
rust/matrix_mul/cuda/: Makefile  a.out  dot.cpp  dot.h  exp_no_share.cu  exp_no_share.cuh  graph.dot  main.cu  main_arb  main_arb.cpp  main_cuda  matrix.h  multNoShare.cu  multNoShare.cuh  utils.cuh
rust/matrust/: Cargo.toml
rust/matrust/src/: lib.rs
